--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "foodfy",
   "version": "1.0.0",
   "description": "Site completo de uma empresa de receitas chamada Foodfy",
-  "main": "data.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm-run-all -p nodemon browsersync",
-    "nodemon": "nodemon server.js",
-    "browsersync": "browser-sync start --proxy http://localhost:5001 --files public,views"
+    "nodemon": "nodemon src/server.js",
+    "browsersync": "browser-sync start --proxy http://localhost:5001 --files public,src/app/views"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "nunjucks": "^3.2.1"
+    "nunjucks": "^3.2.1",
+    "pg": "^8.2.2"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
