--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/emanuelmassafera/foodfy#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
     "nunjucks": "^3.2.1",
     "pg": "^8.2.2"
   },
