--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "nunjucks": "^3.2.1",
-    "pg": "^8.2.2"
+    "pg": "^8.2.2",
+    "http-proxy": ">=1.18.1",
+    "yargs-parser": ">=13.1.2"
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
